# django-stockman

./: .gitignore  CHANGELOG.md  CONTRACTS.md  LICENSE  MANIFEST.in  README.md  __init__.py  admin.py  apps.py  conf.py  exceptions.py  pyproject.toml  service.py
.github/workflows/: test.yml
adapters/: __init__.py  craftsman.py  noop.py  offerman.py
contrib/admin_unfold/: __init__.py  admin.py  apps.py  base.py
docs/concepts/: availability.md
management/commands/: release_expired_holds.py
migrations/: 0001_initial.py  0002_simplify_position_kinds.py  0003_add_position_is_default.py  0004_initial_positions.py  0005_alter_hold_options_alter_move_options_and_more.py  0006_alter_move_options_alter_quant_options_and_more.py  0007_add_stock_alert.py  0008_add_batch_model.py  0009_remove_dead_quant_constraint.py  __init__.py
models/: __init__.py  alert.py  batch.py  enums.py  hold.py  move.py  position.py  quant.py
protocols/: __init__.py  production.py  sku.py
services/: __init__.py  alerts.py  holds.py  movements.py  planning.py  queries.py
tests/: conftest.py  test_availability.py  test_integration.py  test_service.py
